# esp32-dht22-azureiot

./: CMakeLists.txt  README.md  azuredeploy.json
main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  iothub_client_sample_mqtt.c  iothub_publisher.c  main.c
